--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
   <body>
     <div class="counter-container">
       <i class="fab fa-twitter fa-3x"></i>
-      <div class="counter" data-target="12000"></div>
+      <div class="counter" data-target="1000000"></div>
       <span>Twitter Followers</span>
     </div>
 
     <div class="counter-container">
-      <i class="fab fa-youtube fa-3x"></i>
-      <div class="counter" data-target="5000"></div>
-      <span>YouTube Subscribers</span>
+      <i class="fab fa-instagram fa-3x"></i>
+      <div class="counter" data-target="50000000"></div>
+      <span>Instagram Followers</span>
     </div>
 
     <div class="counter-container">
-      <i class="fab fa-facebook fa-3x"></i>
-      <div class="counter" data-target="50000"></div>
-      <span>Facebook Fans</span>
+      <i class="fab fa-youtube fa-3x"></i>
+      <div class="counter" data-target="10000000"></div>
+      <span>YouTube Subscribers</span>
     </div>
 
     <script src="script.js"></script>
